--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-photoeditorsdk",
   "title": "React Native module for PhotoEditor SDK",
-  "version": "2.11.0",
+  "version": "2.12.0",
   "description": "A React Native module for PhotoEditor SDK. Integrate the photo editor into your own HTML5, iOS or Android app - in minutes!",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -36,5 +36,8 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react-native": ">=0.60.0 <1.0.x"
+  },
+  "dependencies": {
+    "react-native-imglysdk": "2.12.0"
   }
 }
