--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "react-native": ">=0.60.0 <1.0.x"
   },
   "dependencies": {
-    "react-native-imglysdk": "3.0.0"
+    "react-native-imglysdk": "git+https://github.com/foloinfo/imgly-react-native#679f3d8"
   }
 }
