--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
             android:exported="false"
             android:enabled="false"
             android:name="ly.img.android.IMGLYAutoInit" />
-        <activity android:name=".RNPhotoEditorSDKActivity" />
+        <activity 
+            android:theme="@style/Theme.Imgly"
+            android:name=".RNPhotoEditorSDKActivity" />
     </application>
 </manifest>
   
