--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-photoeditorsdk",
   "title": "React Native module for PhotoEditor SDK",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "A React Native module for PhotoEditor SDK. Integrate the photo editor into your own HTML5, iOS or Android app - in minutes!",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -28,7 +28,7 @@
     "android"
   ],
   "author": {
-    "name": "img.ly GmbH",
+    "name": "IMG.LY GmbH",
     "email": "contact@img.ly"
   },
   "license": "BSD-3-Clause",
@@ -38,6 +38,6 @@
     "react-native": ">=0.60.0 <1.0.x"
   },
   "dependencies": {
-    "react-native-imglysdk": "3.1.0"
+    "react-native-imglysdk": "3.2.0"
   }
 }
